--- a/.github/workflows/devcard.yml
+++ b/.github/workflows/devcard.yml
@@ -1,30 +1,16 @@
-# This is a basic workflow to help you get started with Actions
-
 name: daily-devcard
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   schedule:
-      - cron: "0 0 * * *"
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+    - cron: "0 0 * * *"
 jobs:
-  # This workflow contains a single job called "build"
   devcard:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    permissions: write
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    permissions:
+      contents: write
     steps:
       - name: devcard
         uses: dailydotdev/action-devcard@3.0.0
